Remove deprecated scriptlibrary. java9 migration